compiling with c++98 flag

--- a/cpp00/ex01/Makefile
+++ b/cpp00/ex01/Makefile
@@ -13,7 +13,7 @@ PROG = CPP01
 
 CC = c++
 RM = rm -f
-CFLAGS = -Wall -Wextra -Werror #-std=c++98
+CFLAGS = -Wall -Wextra -Werror -std=c++98
 
 %.o: %.cpp Makefile
 		@${CC} ${CFLAGS} -c $< -o $@
