--- a/cpp00/ex01/Makefile
+++ b/cpp00/ex01/Makefile
@@ -26,6 +26,9 @@ ${NAME}: ${OBJS}
 	${CC} $(CFLAGS) $(OBJS) -o ${NAME}
 	printf "${WHITE}${PROG}: ${GREEN}Binary compiled!${RESET}\n"
 
+leaks: ${NAME}
+	leaks -atExit -- ./${NAME}
+
 clean:
 	${RM} ${OBJS}
 
@@ -40,4 +43,4 @@ fclean: clean
 re: fclean all
 
 .PHONY: all clean fclean re clean
-.SILENT: ${NAME} run clean fclean
+.SILENT: ${NAME} run clean fclean leaks
