--- a/cpp01/ex01/Makefile
+++ b/cpp01/ex01/Makefile
@@ -46,4 +46,4 @@ fclean: clean
 re: fclean all
 
 .PHONY: all clean fclean re clean
-.SILENT: ${NAME} run clean fclean
+.SILENT: ${NAME} run clean fclean leaks
