--- a/cpp01/ex02/Makefile
+++ b/cpp01/ex02/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: nuferron <nuferron@student.42.fr>          +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2024/01/09 15:48:53 by nuferron          #+#    #+#              #
+#    Updated: 2024/01/09 15:48:55 by nuferron         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 RED = \033[1;31m
 GREEN = \033[1;32m
 YELLOW = \033[1;33m
