--- a/cpp04/ex03/Makefile
+++ b/cpp04/ex03/Makefile
@@ -6,7 +6,7 @@
 #    By: nuferron <nuferron@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/01/09 15:50:10 by nuferron          #+#    #+#              #
-#    Updated: 2024/03/19 17:16:34 by nuferron         ###   ########.fr        #
+#    Updated: 2024/04/15 19:04:37 by nuferron         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -20,14 +20,14 @@ WHITE = \033[1;37m
 RESET = \033[0m
 
 NAME = interface
-SHARED_FILES = Materia Ice Cure Character
+SHARED_FILES = AMateria Ice Cure Character
 SRCS = $(addsuffix .cpp,$(SHARED_FILES)) main.cpp
 HEADERS = $(addsuffix .hpp,$(SHARED_FILES)) ICharacter.hpp
 PROG = CPP04 EX03
 
 CC = c++
 RM = rm -f
-CFLAGS = -Wall -Wextra -Werror -std=c++98
+CFLAGS = -Wall -Wextra -Werror -std=c++98 -fsanitize=address
 
 OBJS = ${SRCS:.cpp=.o}
 
